--- a/Q5-svm.ipynb
+++ b/Q5-svm.ipynb
@@ -231,17 +231,18 @@
    "metadata": {},
    "source": [
     "#### Better Feature Extraction\n",
-    "In order to get better testing result, I will use pretrain resnet34 as the main feature extraction method to obtain the feature.And then I will use the SVM to complete the classify task."
+    "In order to get better testing result, I will try to use pretrain resnet34 as the main feature extraction method to obtain the feature. And then I will use the SVM to complete the classify task."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
+    "import time\n",
     "from torchvision import datasets, transforms, models\n",
     "from torch.utils.data import DataLoader\n",
     "from sklearn.svm import SVC\n",
@@ -250,66 +251,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading: \"https://download.pytorch.org/models/resnet34-b627a593.pth\" to C:\\Users\\23629/.cache\\torch\\hub\\checkpoints\\resnet34-b627a593.pth\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c45b4cc89f464a00b9bdc25c0398a859",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0.00/83.3M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "batch_size = 64\n",
+    "# Use pretrain resnet 34 to extract image feature\n",
+    "# resnet 18: models.ResNet18_Weights.DEFAULT\n",
+    "# resnet 34: models.ResNet34_Weights.DEFAULT\n",
+    "# resnet 50: models.ResNet50_Weights.DEFAULT\n",
+    "model = models.resnet34(weights=models.ResNet34_Weights.DEFAULT)\n",
+    "model.fc = nn.Identity()\n",
+    "for param in model.parameters():\n",
+    "    param.requires_grad = False\n",
     "\n",
     "transform = transforms.Compose([\n",
     "    transforms.Resize((224, 224)),\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
-    "])\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**In order to use transform to adapt resnet 34 (with 224x224 input image size), reload the dataset but not change any other things**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "start_time = time.time()\n",
     "\n",
     "cifar_trainset = datasets.CIFAR10(root='./dataset', train=True, download=False, transform=transform)\n",
     "cifar_testset = datasets.CIFAR10(root='./dataset', train=False, download=False, transform=transform)\n",
     "\n",
     "train_loader = DataLoader(cifar_trainset, batch_size=batch_size, shuffle=False)\n",
-    "test_loader = DataLoader(cifar_testset, batch_size=batch_size, shuffle=False)\n",
-    "\n",
-    "# Use pretrain resnet 34 to extract image feature\n",
-    "model = models.resnet34(weights=models.ResNet34_Weights.DEFAULT)\n",
-    "model.fc = nn.Identity()\n",
-    "for param in model.parameters():\n",
-    "    param.requires_grad = False"
+    "test_loader = DataLoader(cifar_testset, batch_size=batch_size, shuffle=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 782/782 [28:17<00:00,  2.17s/it]\n",
-      "Processing: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 157/157 [03:18<00:00,  1.27s/it]"
+      "train dataset feature extract: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 782/782 [17:35<00:00,  1.35s/it]\n",
+      "test dataset feature extract: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 157/157 [03:23<00:00,  1.29s/it]"
      ]
     },
     {
@@ -329,12 +326,12 @@
     }
    ],
    "source": [
-    "def extract_features(model, loader):\n",
+    "def extract_features(model, loader, tip):\n",
     "    model.eval()\n",
     "    features = []\n",
     "    labels = []\n",
     "    with torch.no_grad():\n",
-    "        for inputs, targets in tqdm(loader,\"Processing: \"):\n",
+    "        for inputs, targets in tqdm(loader,f\"{tip} dataset feature extract: \"):\n",
     "            outputs = model(inputs)\n",
     "            features.append(outputs)\n",
     "            labels.append(targets)\n",
@@ -342,16 +339,17 @@
     "    labels = torch.cat(labels, dim=0)\n",
     "    return features.numpy(), labels.numpy()\n",
     "\n",
-    "# Obtain the image featrue of train and test dataset \n",
-    "X_train_feat, y_train = extract_features(model, train_loader)\n",
-    "X_test_feat, y_test = extract_features(model, test_loader)\n",
+    "X_train_feat, y_train = extract_features(model, train_loader,\"train\")\n",
+    "X_test_feat, y_test = extract_features(model, test_loader,\"test\")\n",
+    "featrue_extraction_time = time.time()\n",
+    "\n",
     "print(X_train_feat.shape)\n",
     "print(y_train.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -377,22 +375,33 @@
       "   macro avg       0.88      0.88      0.88     10000\n",
       "weighted avg       0.88      0.88      0.88     10000\n",
       "\n",
-      "time consumption: 191.0444619655609\n"
+      "Feature extract time consumption 1259.9525394439697\n",
+      "SVM time consumption: 169.76516246795654\n",
+      "Total time consumption: 1429.7177019119263\n"
      ]
     }
    ],
    "source": [
-    "# use SVM to classify \n",
-    "import time\n",
-    "start_time = time.time()\n",
+    "#################################################################################################################\n",
+    "# Step 1 TODO:                                                                                                  #\n",
+    "# Training a linear SVM using training set.                                                                     #\n",
+    "#################################################################################################################\n",
     "\n",
     "svm = SVC(kernel='linear')\n",
     "svm.fit(X_train_feat, y_train)\n",
     "\n",
-    "# test SVM\n",
+    "########################################################################################################\n",
+    "# Step 2 TODO:                                                                                         #\n",
+    "# Using the trained SVM to predict the classification results of validation set.                       #\n",
+    "# Test the SVM you implemented above.                                                                  #\n",
+    "########################################################################################################\n",
     "from sklearn.metrics import classification_report\n",
-    "print(classification_report(y_test, svm.predict(X_test_feat)))\n",
-    "print(\"time consumption:\",time.time() - start_time)"
+    "y2_pred = svm.predict(X_test_feat)\n",
+    "print(classification_report(y_test, y2_pred))\n",
+    "\n",
+    "print(\"Feature extract time consumption\",featrue_extraction_time - start_time)\n",
+    "print(\"SVM time consumption:\",time.time() - featrue_extraction_time)\n",
+    "print(\"Total time consumption:\",time.time() - start_time)"
    ]
   },
   {
@@ -412,13 +421,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- For the PCA+SVM approach, it can project complex high-dimensional data into a low-dimensional space, thereby achieving a certain degree of class separation. However, since PCA reduces dimensionality by identifying the principal directions of data distribution while paying less attention to intra-class compactness and inter-class separability, the differences between different categories become less distinct after projection. This, in turn, leads to poor classification performance by SVM. To address this issue, I further enhanced the process by extracting information from different channels and positions of the images, while maximizing the feature distances between different categories. For this purpose, I chose to use the ResNet series for feature extraction.\n",
+    "- For the PCA+SVM approach, it can project complex high-dimensional data into a low-dimensional space, thereby achieving a certain degree of class separation. However, since PCA reduces dimensionality by identifying the principal directions of data distribution while paying less attention to intra-class compactness and inter-class separability, the differences between different categories become less distinct after projection. This makes it difficult for the SVM to find a decision boundary that can correctly classify most of the samples during the training process. As a result, this not only increases the training time for the SVM but also lowers the final accuracy. To address this issue, I further enhanced the process by extracting information from different channels and positions of the images, while maximizing the feature distances between different categories. For this purpose, I chose to use the ResNet series for feature extraction.\n",
     "\n",
     "- ResNet introduces skip connections combined with convolutional layers, enabling the network to transform input image data into high-quality flat vectors before the final fully connected (fc) layer. At the same time, it ensures that these vectors maximize the inter-class distances in the feature space. Considering that the final testing process needs to be completed in a CPU environment within a one-hour time limit, using a small pre-trained model is essential. \n",
     "\n",
-    "- During the experiment, I tested two different ResNet models: ResNet18 and ResNet34:\n",
+    "- During the experiment, I tested three different ResNet models: ResNet18, ResNet34 and ResNet50\n",
     "    - ResNet18: Due to its smaller size, ResNet18 was insufficient in extracting features from the input images, leading to slightly lower classification performance when fed into the SVM compared to ResNet34.\n",
     "    - ResNet34: ResNet34, with its stronger feature extraction capabilities, performed better. I removed the model's fc layer and directly fed the extracted feature vectors into the SVM for classification. To ensure proper feature extraction, I resized the input images to 224×224.\n",
+    "    - ResNet50: Compared to ResNet34, ResNet50 has a more complex network structure and a larger number of parameters, theoretically enabling it to achieve more powerful image feature extraction capabilities. However, the image content in CIFAR-10 is relatively simple. On one hand, it does not require an overly complex network for feature extraction, and on the other hand, using ResNet50 for inference on a CPU takes too much time. Therefore, after testing, I decided to abandon ResNet50. \n",
     "\n",
     "- It is worth noting that, to ensure the ResNet model extracts features correctly, I resized the input images to 224×224. Finally, after approximately one hour of runtime, I achieved an 88% classification accuracy on the CIFAR-10 dataset, which meets the expected results.\n",
     "\n",
@@ -428,11 +438,19 @@
     "- However, for category 3, its precision is only 0.77, the lowest of all categories, which means that this kind of category may have some similarity with the other categories, leading to confusion in the classifier. Such issues could potentially be resolved by using larger models, such as ResNet50 or ResNet101, which are capable of extracting more comprehensive features and improving classification performance. However, due to limitations in hardware and time, the final classification accuracy is somewhat affected. \n",
     "\n",
     "- In addition, the running time in CPU environment is: \n",
-    "    - Feature extraction: 1895 seconds (31.6 min)\n",
-    "    - SVM process: 191 seconds (3.2 min)  \n",
+    "    - Feature extraction: 1260 seconds (21 min)\n",
+    "    - SVM process: 170 seconds (2.8 min)\n",
+    "    - Total process: 1430 seconds (24 min)\n",
     "\n",
     "- Overall, by combining deep learning and traditional machine learning methods, the model balances the quality of feature extraction and the computational cost, achieving a good classification effect, but there is still room for improvement in the ability to distinguish individual category"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
