--- a/Ass2/Q3.ipynb
+++ b/Ass2/Q3.ipynb
@@ -565,6 +565,60 @@
     "    ######################\n",
     "    #   YOUR CODE HERE   #\n",
     "    ######################\n",
+    "    optimizer = opt_fn(model.parameters(), lr=lr)\n",
+    "    for epoch in range(n_epochs):\n",
+    "        model.train()\n",
+    "\n",
+    "        epoch_train_loss = 0\n",
+    "        correct_train = 0\n",
+    "        total_train = 0\n",
+    "        \n",
+    "        for img, label in train_dl:\n",
+    "            output = model(img)\n",
+    "            loss = loss_fn(label, output)\n",
+    "            \n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "\n",
+    "            epoch_train_loss += loss.item()\n",
+    "            _, predicted = torch.max(output, 1)\n",
+    "            correct_train += (predicted == label).sum().item()\n",
+    "            total_train += label.size(0)\n",
+    "            \n",
+    "        train_loss = epoch_train_loss / len(train_dl)\n",
+    "        train_accuracy = correct_train / total_train\n",
+    "        train_losses.append(train_loss)\n",
+    "        train_accuracies.append(train_accuracy)\n",
+    "        \n",
+    "        # Validation phase\n",
+    "        model.eval()\n",
+    "        \n",
+    "        epoch_val_loss = 0\n",
+    "        correct_val = 0\n",
+    "        total_val = 0\n",
+    "\n",
+    "        with torch.no_grad():\n",
+    "            for img, label in val_dl:\n",
+    "                \n",
+    "                output = model(img)\n",
+    "                loss = loss_fn(output, label)\n",
+    "                \n",
+    "                epoch_val_loss += loss.item()\n",
+    "                _, predicted = torch.max(output, 1)\n",
+    "                correct_val += (predicted == label).sum().item()\n",
+    "                total_val += label.size(0)\n",
+    "        \n",
+    "        val_loss = epoch_val_loss / len(val_dl)\n",
+    "        val_accuracy = correct_val / total_val\n",
+    "        val_losses.append(val_loss)\n",
+    "        val_accuracies.append(val_accuracy)\n",
+    "        \n",
+    "        print(f\"Epoch {epoch+1}/{n_epochs}:\")\n",
+    "        print(f\"  Train Loss: {train_loss:.4f}, Train Accuracy: {train_accuracy:.4f}\")\n",
+    "        print(f\"  Val Loss: {val_loss:.4f}, Val Accuracy: {val_accuracy:.4f}\")\n",
+    "        \n",
+    "        \n",
     "    \n",
     "    return model, train_losses, val_losses, train_accuracies, val_accuracies"
    ]
@@ -585,10 +639,10 @@
     "######################\n",
     "#   YOUR CODE HERE   #\n",
     "######################\n",
-    "num_epochs = # Max number of training epochs\n",
-    "loss_fn =  # Define the loss function\n",
-    "opt_fn =  # Select an optimizer\n",
-    "lr =  # Set the learning rate"
+    "num_epochs = 20  # Max number of training epochs\n",
+    "loss_fn = loss_fn = torch.nn.CrossEntropyLoss() # Define the loss function\n",
+    "opt_fn = torch.optim.Adam # Select an optimizer\n",
+    "lr = 0.01 # Set the learning rate"
    ]
   },
   {
@@ -694,8 +748,8 @@
     "######################\n",
     "#   YOUR CODE HERE   #\n",
     "######################\n",
-    "num_epochs = # Max number of training epochs\n",
-    "lr = # Set the learning rate"
+    "num_epochs = 20 # Max number of training epochs\n",
+    "lr = 0.01 # Set the learning rate"
    ]
   },
   {
@@ -823,7 +877,23 @@
     "    \"\"\"\n",
     "    ######################\n",
     "    #   YOUR CODE HERE   #\n",
-    "    ######################"
+    "    ######################\n",
+    "    model.eval()\n",
+    "\n",
+    "    correct_val = 0\n",
+    "    total_val = 0\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "        for img, label in val_dl:\n",
+    "            output = model(img)\n",
+    "            \n",
+    "            _, predicted = torch.max(output, 1)\n",
+    "            correct_val += (predicted == label).sum().item()\n",
+    "            total_val += label.size(0)\n",
+    "    \n",
+    "    return correct_val / total_val\n",
+    "\n",
+    "     "
    ]
   },
   {
