--- a/Ass2/Q4/Sentiment analysis.ipynb
+++ b/Ass2/Q4/Sentiment analysis.ipynb
@@ -268,7 +268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 64\n",
+    "batch_size = 32\n",
     "train_iter, test_iter, vocab = load_data_imdb(batch_size)"
    ]
   },
@@ -297,7 +297,7 @@
    "source": [
     "class BiRNN(nn.Module):\n",
     "    def __init__(self, vocab_size, embed_size, num_hiddens,\n",
-    "                 num_layers, **kwargs):\n",
+    "                 num_layers, dropout=0.5 **kwargs):\n",
     "        ### START CODE HERE ###\n",
     "        super(BiRNN, self).__init__() \n",
     "        self.emb = nn.Embedding(vocab_size, embed_size)\n",
@@ -307,8 +307,9 @@
     "                               hidden_size=num_hiddens,\n",
     "                               num_layers=num_layers,\n",
     "                               bidirectional=True,\n",
-    "                               batch_first=True)\n",
-    "\n",
+    "                               batch_first=True,\n",
+    "                               dropout=dropout if num_layers > 1 else 0.0)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
     "        self.decoder = nn.Linear(4 * num_hiddens, 2)\n",
     "        ### END CODE HERE ###\n",
     "\n",
@@ -322,7 +323,7 @@
     "        # Concatenate the forward and backward hidden states of the last time step\n",
     "        encoding = torch.cat((outputs[:, 0, :], outputs[:, -1, :]), dim=1)  # (batch_size, 4 * num_hiddens)\n",
     "\n",
-    "        outs = self.decoder(encoding)  # (batch_size, 2)\n",
+    "        outs = self.decoder(self.dropout(encoding))  # (batch_size, 2)\n",
     "        return outs\n",
     "        ### END CODE HERE ###\n"
    ]
@@ -664,7 +665,7 @@
    "outputs": [],
    "source": [
     "class TextCNN(nn.Module):\n",
-    "    def __init__(self, vocab_size, embed_size, kernel_sizes, num_channels,\n",
+    "    def __init__(self, vocab_size, embed_size, kernel_sizes, num_channels, dropout=0.5\n",
     "                 **kwargs):\n",
     "        ### START CODE HERE ###\n",
     "        super(TextCNN, self).__init__() \n",
@@ -676,7 +677,7 @@
     "                      kernel_size=k) \n",
     "            for k in kernel_sizes\n",
     "        ])\n",
-    "\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
     "        self.fc = nn.Linear(num_channels * len(kernel_sizes), 2)\n",
     "\n",
     "        ### END CODE HERE ### \n",
@@ -691,7 +692,7 @@
     "        ]\n",
     "\n",
     "        concat = torch.cat(conv_outputs, dim=1)\n",
-    "        outputs = self.fc(concat)\n",
+    "        outputs = self.dropout(self.fc(concat))\n",
     "        return outputs\n",
     "        ### END CODE HERE ### "
    ]
@@ -1030,7 +1031,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
