--- a/Ass2/Q3.ipynb
+++ b/Ass2/Q3.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "id": "z4MgUeiWi70U"
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "id": "98pfn3hCi70W"
    },
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "id": "sIBNk7RBi70W"
    },
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "id": "NB4hMGiii70X"
    },
@@ -1970,7 +1970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {
     "id": "6FHcNSbZi70f"
    },
@@ -1981,7 +1981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {
     "id": "Ff16P3Lhi70g"
    },
@@ -1993,7 +1993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {
     "id": "rbXEywHXi70g"
    },
@@ -2019,7 +2019,7 @@
     "    total_val = 0\n",
     "\n",
     "    with torch.no_grad():\n",
-    "        for img, label in val_dl:\n",
+    "        for img, label in test_dl:\n",
     "            output = model(img)\n",
     "\n",
     "            _, predicted = torch.max(output, 1)\n",
@@ -2730,9 +2730,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Find 11 number of model files, Testing...\n",
+      "model: 30_0.0005_model.pth - Test accuracy = 0.8644\n",
+      "model: 30_0.001_model.pth - Test accuracy = 0.8506\n",
+      "model: 30_0.005_model.pth - Test accuracy = 0.6796\n",
+      "model: 50_0.0005_model.pth - Test accuracy = 0.8621\n",
+      "model: 50_0.001_model.pth - Test accuracy = 0.8574\n",
+      "model: 50_0.005_model.pth - Test accuracy = 0.5891\n",
+      "model: 70_0.0005_model.pth - Test accuracy = 0.8645\n",
+      "model: 70_0.001_model.pth - Test accuracy = 0.8507\n",
+      "model: 70_0.005_model.pth - Test accuracy = 0.6436\n",
+      "model: basic_model.pth - Test accuracy = 0.8509\n",
+      "model: data_augment_model.pth - Test accuracy = 0.7615\n"
+     ]
+    }
+   ],
    "source": [
     "model_dir = \"output_model\"\n",
     "\n",
@@ -2748,11 +2767,12 @@
     "        model_path = os.path.join(model_dir, model_file)\n",
     "\n",
     "        try:\n",
-    "            model = ImageClassifierNet()\n",
+    "            model = torch.load(model_path)\n",
+    "            device = get_default_device()\n",
     "            to_device(model, device)\n",
     "            \n",
-    "            state_dict = torch.load(model_path)\n",
-    "            model.load_state_dict(state_dict)\n",
+    "            # state_dict = torch.load(model_path)\n",
+    "            # model.load_state_dict(state_dict)\n",
     "            model.eval()\n",
     "\n",
     "            accuracy = evaluate(model, test_dl)\n",
@@ -2761,6 +2781,16 @@
     "\n",
     "        except Exception as e:\n",
     "            print(f\"model:  {model_file} error: {str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Experience Result Analysis\n",
+    "Using model parameters previously trained with different hyperparameters and data augmentation strategies, we conducted a brief ablation study to analyze their effects on model performance. The results indicate that a smaller learning rate (0.0005) consistently led to higher test accuracy, achieving around 86% across different epoch settings (30, 50, and 70 epochs). Increasing the learning rate to 0.001 caused a slight decrease in performance, while a learning rate of 0.005 significantly degraded accuracy, highlighting the importance of careful learning rate selection. In contrast, the number of training epochs had a relatively minor impact once the model had sufficiently converged, suggesting that extended training beyond 30 epochs brought limited additional benefits.\n",
+    "\n",
+    "Furthermore, we compared the performance of a basic model with a model trained using data augmentation techniques. The basic model achieved a test accuracy of 85.09%, whereas the data-augmented model reached only 76.15%. This decline suggests that the current data augmentation strategy did not effectively enhance the model’s generalization ability and may have introduced additional complexity that hindered performance. Overall, these results emphasize that optimizing the learning rate plays a critical role in improving model accuracy, while adjustments to the number of epochs and simple data augmentation strategies have relatively limited effects."
    ]
   },
   {
